# text-to-sql-finetuning

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Makefile  README.md  environment.yml  install.sh  pyproject.toml  requirements.txt  setup.py  setup_dev_env.sh
.github/workflows/: _config.yml  claude.yml
config/: config.py  config.yaml
config/dataset/: dataset.yaml
config/evaluation/: evaluation.yaml
config/hf/: hf.yaml
config/inference/: inference.yaml
config/training/: training.yaml
config/wandb/: wandb.yaml
docs/: index.md
results/: evaluation_results_20251016_113619.json  evaluation_results_20251016_154442.json  evaluation_results_20251016_155824.json  evaluation_results_20251016_162107.json  evaluation_results_20251016_173509.json
scripts/: Complete-Evaluation-Guide.md  README.md  evaluate.py  inference.py  merge_and_upload.py  prepare_data.py  train.py  upload_to_hf.py
src/: __init__.py  data_preparation.py  evaluate.py  model_setup.py  training.py  utils.py
