# pyproject.toml
[project]
name = "text_to_sql_finetuning"
version = "0.1.0"
description = "Fine-tune language models for text-to-SQL tasks using Hydra and Hugging Face."
readme = "README.md"
requires-python = ">=3.11"

# Runtime dependencies
dependencies = [
    "torch>=2.4.0,<3.0",
    "transformers>=4.44,<5.0",
    "datasets>=2.21,<3.0",
    "hydra-core>=1.3.2,<2.0",
    "python-dotenv>=1.1.1,<2.0"
]

# Optional dependency groups
[project.optional-dependencies]
# For model training (LoRA, TRL, accelerator, etc.)
training = [
    "accelerate>=0.33.0,<1.0",
    "trl>=0.9.6,<1.0",
    "peft>=0.12.0,<1.0",
    "bitsandbytes>=0.42.0,<1.0",
    "wandb>=0.22.1,<1.0"
]

# For evaluation tasks
evaluation = [
    "evaluate>=0.4.2,<1.0"
]

# For development: linting, formatting, testing
dev = [
    "black>=23.9.1,<24.0",
    "isort>=5.12.0,<6.0",
    "pytest>=8.4.2,<9.0",
    "mypy>=1.5.1,<2.0"
]

[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"
