# pyproject.toml
[project]
name = "text_to_sql_finetuning"
version = "0.1.0"
description = "Fine-tune language models for text-to-SQL tasks using Hydra and Hugging Face."
readme = "README.md"
requires-python = ">=3.11"

# Runtime dependencies
dependencies = [
    "torch>=2.4.0,<3.0",
    "transformers>=4.45.0,<5.0",
    "datasets>=3.0.0,<4.0",
    "hydra-core>=1.3.2,<2.0",
    "python-dotenv>=1.0.1,<2.0"
]

# Optional dependency groups
[dependency-groups]
# For model training (LoRA, TRL, accelerator, etc.)
training = [
    "accelerate>=1.10.1,<2.0",
    "trl>=0.11.0,<1.0",
    "peft>=0.13.0,<1.0",
    "bitsandbytes>=0.45.0,<1.0",
    "wandb>=0.18.5,<1.0"
]

# For evaluation tasks
evaluation = [
    "evaluate>=0.4.2,<1.0"
]

# For development: linting, formatting, testing
dev = [
    "black>=24.8.0,<25.0",
    "isort>=5.13.2,<6.0",
    "pytest>=8.3.0,<9.0",
    "mypy>=1.10.0,<2.0"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
